# projeto-TDD

./: docker-compose.yml  pyproject.toml
store/core/: config.py
store/models/: product.py
