[tool.poetry]
name = "tdd-project"
version = "0.0.1"
description = ""
authors = ["Alexandre Maria da Conceição <142837105+kalex365@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.1.0"
motor = "^3.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
